--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "http://jaimedavid01.github.io/react-hooks-practice-pokemon-searcher",
   "name": "react-hooks-practice-pokemon-searcher",
   "version": "0.1.0",
   "private": true,
@@ -11,9 +12,12 @@
     "semantic-ui-react": "^2.0.1"
   },
   "devDependencies": {
+    "gh-pages": "^3.1.0",
     "json-server": "^0.15.1"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "json-server --watch db.json -p 3001 & open http://localhost:3001/pokemon & react-scripts start && fg"
   },
   "eslintConfig": {
